# NLPiper

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: publish.yml  python-app.yml  test.yml
docs/source/: conf.py  index.rst  introduction.rst  transformers.cleaners.rst  transformers.embeddings.rst  transformers.normalizers.rst  transformers.tokenizers.rst
nlpiper/: __init__.py  logger.py
nlpiper/core/: __init__.py  composition.py  document.py
nlpiper/transformers/: __init__.py  base.py  cleaners.py  composition.py  embeddings.py  normalizers.py  tokenizers.py
tests/: conftest.py
tests/core/: test_composition.py  test_document.py
tests/transformers/: __init__.py  test_base.py  test_cleaners.py  test_composition.py  test_embeddings.py  test_normalizers.py  test_tokenizers.py
